--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -1,3 +1,8 @@
+<head>
+  <script src="https://cdn-webgl.wrld3d.com/wrldjs/dist/latest/wrld.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css" rel="stylesheet" />
+</head> 
+<body> 
 <ion-header>
   <ion-toolbar>
     <ion-title>
@@ -10,3 +15,4 @@
   <div id="map" style="width: 100%; height: 100%">
   </div>
 </ion-content>
+</body>
