create login page

--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -5,9 +5,12 @@
 <body> 
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <!-- <ion-title>
       Leaflet 1
-    </ion-title>
+      </ion-title> -->
+      <ion-button (click) = "logout()">
+        logout
+      </ion-button>
   </ion-toolbar>
 </ion-header>
 
