--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -1,6 +1,12 @@
 <head>
   <script src="https://cdn-webgl.wrld3d.com/wrldjs/dist/latest/wrld.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css" rel="stylesheet" />
+  <!-- <link href="../node_modules/leaflet/dist/leaflet.css" rel="stylesheet" />
+  <link href="../node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
 </head> 
 <body> 
 <ion-header>
@@ -15,7 +21,6 @@
 </ion-header>
 
 <ion-content>
-  <div id="map" style="width: 100%; height: 100%">
-  </div>
+  <div id="map" style="width: 100%; height: 100%"></div>
 </ion-content>
 </body>
