--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content color="primary" padding>
+<!-- <ion-content color="primary" padding>
   <ion-grid>
     <ion-row color="primary" justify-content-center>
       <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -12,7 +12,7 @@
           </ion-item>
           <br><br>
           <ion-item>
-            <ion-input placeholder="Password" type="password" value="password" [(ngModel)]="password" (ionChange)="enterPassword()"></ion-input>
+            <ion-input class="input" placeholder="Password" type="password" value="password" [(ngModel)]="password" (ionChange)="enterPassword()"></ion-input>
           </ion-item>
         </div>
         <br><br>
@@ -22,6 +22,28 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+</ion-content> -->
+
+<ion-content>
+  <ion-grid>
+      <ion-row>
+          <ion-col size-xs="12" size-sm="12" size-md="6" size-lg="6" size-xl="6" class = "col-container">
+              <ion-row class = "gsmb-top-logo-container">
+                  <img class = "gsmb-top-logo" src="./assets/images/Image1.png">
+              </ion-row>
+          </ion-col>
+          <ion-col class="col-container">
+            <ion-input class="input" placeholder="UserName" type="text" value="userName" [(ngModel)]="userName" (ionChange)="enterUserName()">
+              </ion-input>
+              <ion-input class="input" placeholder="Password" type="password" value="password" [(ngModel)]="password" (ionChange)="enterPassword()">
+              </ion-input>
+              <ion-button class = "nav-bottons" [disabled] = "loginDisable" (click)="login()" expand="block"> Login
+              </ion-button>
+          </ion-col>
+      </ion-row>
+  </ion-grid>
 </ion-content>
+
+
 
 
