--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -20,9 +20,15 @@
 <body> 
 <ion-header>
   <ion-toolbar>
-    <ion-button (click) = "logout()">
+    <!-- <ion-button (click) = "logout()">
         logout
-      </ion-button>
+      </ion-button> -->
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    <ion-title>
+      Google Map
+    </ion-title>    
   </ion-toolbar>
 </ion-header>
 <div id="distancetravelled"></div>
