--- a/src/app/googlemap/googlemap.page.scss
+++ b/src/app/googlemap/googlemap.page.scss
@@ -20,3 +20,8 @@ path.leaflet-interactive.animate {
         stroke-dashoffset: 0;
     }
 }    
+
+.btn-group {
+    justify-content: flex-end;
+    display: flex;
+  }
