--- a/src/app/googlemap/googlemap.page.scss
+++ b/src/app/googlemap/googlemap.page.scss
@@ -21,7 +21,7 @@ path.leaflet-interactive.animate {
     }
 }    
 
-.btn-group {
-    justify-content: flex-end;
-    display: flex;
-  }
+// .btn-group {
+//     justify-content: flex-end;
+//     display: flex;
+//   }
