--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -45,11 +45,11 @@
 <div id="distancetravelled"></div>
 <ion-content>
   <div id="map" style="width: 100%; height: 100%">
-    <div class="btn-group" style="z-index: 1001"> <!-- Use 401 to be between map and controls -->
+    <!-- <div class="btn-group" style="z-index: 1001"> 
       <button type="buttons" id="allbus" class="btn btn-success">All</button>
       <button type="buttons" id="others" class="btn btn-primary">Others</button>
       <button type="buttons" id="cafes" class="btn btn-danger">Cafes</button>
-      </div>
+      </div> -->
   </div>
 </ion-content>
 </body>
