complete button for go to dashboard

--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -45,11 +45,12 @@
 <div id="distancetravelled"></div>
 <ion-content>
   <div id="map" style="width: 100%; height: 100%">
-    <!-- <div class="btn-group" style="z-index: 1001"> 
-      <button type="buttons" id="allbus" class="btn btn-success">All</button>
-      <button type="buttons" id="others" class="btn btn-primary">Others</button>
-      <button type="buttons" id="cafes" class="btn btn-danger">Cafes</button>
-      </div> -->
+    <div class="btn-group" style="margin-top: 60%; margin-right: 10%; float:right; position: relative;z-index: 1001"> 
+      <img src="./assets/icon/button.png" alt="Snow" class="btton-logo">
+      <button class="btn btn-danger" (click)="Dashboard()">go to dashboard</button>
+      <!-- <button type="buttons" id="others" class="btn btn-primary">Others</button>
+      <button type="buttons" id="cafes" class="btn btn-danger">Cafes</button> -->
+      </div>
   </div>
 </ion-content>
 </body>
