--- a/src/app/googlemap/googlemap.page.scss
+++ b/src/app/googlemap/googlemap.page.scss
@@ -21,7 +21,16 @@ path.leaflet-interactive.animate {
     }
 }    
 
-// .btn-group {
-//     justify-content: flex-end;
-//     display: flex;
-//   }
+.btn-group {
+    justify-content: flex-end;
+    display: flex;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+  }
+
+  .btton-logo {
+  height : 100%;
+  max-height: 40px;
+  max-width: 40px;
+ }
