add jeojson file

--- a/src/app/googlemap/googlemap.page.html
+++ b/src/app/googlemap/googlemap.page.html
@@ -36,10 +36,10 @@
 <div id="distancetravelled"></div>
 <ion-content>
   <div id="map" style="width: 100%; height: 100%">
-    <div class="btn-group" style="margin-top: 60%; margin-right: 10%; float:right; position: relative;z-index: 1001"> 
+    <!-- <div class="btn-group" style="margin-top: 60%; margin-left: 10%; float:right; position: relative;z-index: 1001"> 
       <img src="./assets/icon/button.png" alt="Snow" class="btton-logo">
       <button class="btn btn-danger" (click)="Dashboard()">go to dashboard</button>
-      </div>
+      </div> -->
   </div>
 </ion-content>
 </body>
